# Real-Time-Crypto-Tick-Predictor

./: .gitignore  readme.md
Backend/services/: WebSocket.py  backup.py
Modelling/: Stocks.ipynb  current_prices.csv
data/: .dockerignore  .env  Cargo.toml  Dockerfile  requirements.txt
data/scripts/: push.py
data/src/: cleaner.rs  fetcher.rs  lib.rs
