[package]
name = "data_collection"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis 0.32.x with TLS over Tokio
redis = { version = "0.32", features = ["tokio-rustls-comp", "tls-rustls"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-native-certs = "0.8"

# Postgres with chrono & TLS
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2", features = ["with-chrono-0_4"] }
postgres_rustls = "0.1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "fetcher"
path = "src/bin/fetcher.rs"

[[bin]]
name = "cleaner"
path = "src/bin/cleaner.rs"
