[package]
name = "data_collection"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
dotenv = "0.15"
tokio = { version = "1.38", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Redis 0.32.x with native-tls over Tokio
redis = { version = "0.32.5", features = ["tokio-comp", "tokio-native-tls-comp"] }

# Postgres with chrono & native-tls
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types  = { version = "0.2", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5"

# TLS support (OpenSSL via native-tls)
native-tls = "0.2"

# WebSocket client with native-tls
tokio-tungstenite = { version = "0.21", default-features = false, features = ["native-tls"] }
tungstenite = { version = "0.21", default-features = false, features = ["native-tls"] }
url = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
